--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font-awesome --> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css" />
@@ -34,7 +35,7 @@
     </div>
     <main>
         <h1 class="text-center">About Us</h1>
-        <p class="text-center" style="max-width: 1000px; margin: 0 auto;">
+        <p class="text-center" style="max-width: min(90%,1000px); margin: 0 auto;">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam officiis inventore, illo veniam ad, rerum, ducimus repellendus dicta perspiciatis corporis pariatur voluptatibus necessitatibus eos odit? Sit, ad non! Sapiente, vel!
         </p>
         <div class="cards-container">
