--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- font-awesome --> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css" />
@@ -13,21 +14,14 @@
         <div class="nav-content">
             <nav class="navigation">
                 <ul class="left-navigation">
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="./about.html">About Us</a>
-                    </li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="./about.html">About Us</a></li>
                 </ul>
                 <ul class="right-navigation">
-                    <li>
-                        <a href="./login.html" class="login-link">Login</a>
-                    </li>
+                    <li><a href="./login.html" class="login-link">Login</a></li>
 
                 </ul>
             </nav>
-            
             <div class="main-title-container">
                 <h1 class="main-title">Pure Heart Yoga</h1>
                 <button>Explore</button>
@@ -36,14 +30,14 @@
             <div>
                 <i class="fa fa-solid fa-angle-down arrow-down-navigation" id="scroll-icon"></i>
             </div>
-            <div class="mobile-navigation">
+            <nav class="mobile-navigation">
                 <i class="fa fa-solid fa-bars"></i>
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="./about.html">About</a></li>
                     <li><a href="./login.html" class="login-link">Login</a></li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </div>
     <main>
@@ -76,7 +70,7 @@
             <button>Learn More</button>
          </div>
          <div class="contact-form">
-            <form>
+            <form action="data.php" method="post">
                 <h2>Contact Us</h2>
                 <label for="name">Your name:</label>
                 <input type="text" placeholder="Your name" id="name" required /> <br />
