--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
         </ul>
     </nav>
-    <div class="mobile-navigation about-us-mobile-navoigation">
+    <div class="mobile-navigation about-us-mobile-navigation">
         <ul>
             <i>"fa-solid fa-bars"</i>
             <li><a href="/">Home</a></li>
@@ -40,6 +40,11 @@
         </p>
         <div class="cards-container">
             <div class="card">
+                <img src="Gia-About.JPG" alt="Gia">
+                <h2>Gia</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nobis labore repudiandae repellendus porro dicta commodi hic. Omnis ratione dolores voluptate tempora beatae? Eligendi impedit, quasi earum velit consequuntur eius?</p>
+            </div>
+            <!--<div class="card">
                 <img src="https://images.unsplash.com/photo-1602192509154-0b900ee1f851?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzd8fHlvZ2F8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="stock photo">
                 <h2>John Doe</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nobis labore repudiandae repellendus porro dicta commodi hic. Omnis ratione dolores voluptate tempora beatae? Eligendi impedit, quasi earum velit consequuntur eius?</p>
@@ -48,12 +53,7 @@
                 <img src="https://images.unsplash.com/photo-1602192509154-0b900ee1f851?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzd8fHlvZ2F8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="stock photo">
                 <h2>John Doe</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nobis labore repudiandae repellendus porro dicta commodi hic. Omnis ratione dolores voluptate tempora beatae? Eligendi impedit, quasi earum velit consequuntur eius?</p>
-            </div>
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1602192509154-0b900ee1f851?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzd8fHlvZ2F8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="stock photo">
-                <h2>John Doe</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nobis labore repudiandae repellendus porro dicta commodi hic. Omnis ratione dolores voluptate tempora beatae? Eligendi impedit, quasi earum velit consequuntur eius?</p>
-            </div>
+            </div> -->
         </div>
     </main>
     <footer>
