--- a/index.html
+++ b/index.html
@@ -81,8 +81,40 @@
                 <button type="submit">Send</button>
             </form>
          </div>
+         <div class="insta-header">
+         <h1 class="text-center">Follow Us!</h1>
+            <p class="insta-header" style="max-width: min(90%,1000px); margin: 0 auto;">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam officiis inventore, illo veniam ad, rerum, ducimus repellendus dicta perspiciatis corporis pariatur voluptatibus necessitatibus eos odit? Sit, ad non! Sapiente, vel!
+        </p>
+        </div>
+         <div class="insta">
+            <div class="insta-post">
+                
+                <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/Bt9MFsYFFIu/?utm_source=ig_embed&amp;utm_campaign=loading">
+
+                </blockquote> 
+                <script async src="//www.instagram.com/embed.js"></script>
+            </div>
+            <div class="insta-post">
+                <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/B9cgMDaDT2z/?utm_source=ig_embed&amp;utm_campaign=loading">
+
+                </blockquote> 
+                <script async src="//www.instagram.com/embed.js"></script>
+            </div>
+            <div class="insta-post">
+                <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/BwOBTDVjFCG/?utm_source=ig_embed&amp;utm_campaign=loading">
+
+                </blockquote> 
+                <script async src="//www.instagram.com/embed.js"></script>
+            </div>
+         </div>
     </main>
     <footer>
+        <div class="navbar">
+            <a href="/" class="active">Home</a>
+            <a href="login.html">Login</a>
+            <a href="about.html">About</a>
+        </div>
         <p>&copy; Gia Website Draft</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
