--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="mobile-navigation about-us-mobile-navigation">
         <ul>
-            <i>"fa-solid fa-bars"</i>
+            <i class="fa-solid fa-bars"></i>
             <li><a href="/">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./login.html" class="login-link">Login</a></li>
