--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-content">
             <nav class="navigation">
                 <ul class="left-navigation">
-                    <li><a href="/">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About Us</a></li>
                 </ul>
                 <ul class="right-navigation">
