--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <title>Yoga | About</title>
 </head>
 <body>
+    
     <nav class="navigation about-us-navigation" role="navigation">
         <ul class="left-navigation">
             <li>
@@ -16,6 +17,9 @@
             </li>
             <li>
                 <a href="./about.html">About Us</a>
+            </li>
+            <li>
+                <a href="./booking.html">Book A Class</a>
             </li>
         </ul>
         <ul class="right-navigation">
@@ -25,12 +29,14 @@
 
         </ul>
     </nav>
+    
     <div class="mobile-navigation about-us-mobile-navigation">
         <ul>
             <i class="fa-solid fa-bars"></i>
             <li><a href="/">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./login.html" class="login-link">Login</a></li>
+            <li><a href="./booking.html">Book A Class</a></li>
         </ul>
     </div>
     <main>
