--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
             <div class="main-title-container">
                 <h1 class="main-title">Pure Heart Yoga</h1>
-                <button>Explore</button>
+                <button>Book!</button>
             </div>
             <!-- arrow-down (fa fa-solid is from awesome - solid is visible, angle -down is icon position)-->
             <div>
