--- a/about.html
+++ b/about.html
@@ -42,13 +42,13 @@
     <main>
         <h1 class="text-center">About Us</h1>
         <p class="text-center" style="max-width: min(90%,1000px); margin: 0 auto;">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam officiis inventore, illo veniam ad, rerum, ducimus repellendus dicta perspiciatis corporis pariatur voluptatibus necessitatibus eos odit? Sit, ad non! Sapiente, vel!
+        I've always been fascinated with the art of body and movement that’s motivated me, in one shape or form, to be active my entire life. When I took my first yoga class, I realized an immediate connection. After training 5 to 6 days a week in many styles of yoga (Hatha, Ashtanga,etc.), my love for yoga was solidified when I decided I wanted to teach. Educated by the best yoga teachers in NYC, I am certified in Vinyasa Flow Yoga which, short, means the flow of postures linked by the breath. I have worked with Yogis of all levels throughout, NYC, Westchester County, Long Island NY and now beautiful Upstate NY. I have an immense appreciation for yoga and sharing it is my passion. So whether you want to begin or continue, elevate your fitness level, both mind and body, by incorporating yoga in your daily routine. It's always an amazing time, come flow with Gia and we'll journey together. 🙏🏻❤️
         </p>
         <div class="cards-container">
             <div class="card">
                 <img src="Gia-About.JPG" alt="Gia">
                 <h2>Gia</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nobis labore repudiandae repellendus porro dicta commodi hic. Omnis ratione dolores voluptate tempora beatae? Eligendi impedit, quasi earum velit consequuntur eius?</p>
+                <p>Gia is a Yoga Instructor and Owner of Pure Heart Yoga LLC. We are currently located at Clearly Connected in Whitesboro.</p>
             </div>
             <!--<div class="card">
                 <img src="https://images.unsplash.com/photo-1602192509154-0b900ee1f851?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mzd8fHlvZ2F8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60" alt="stock photo">
