--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <nav class="navigation about-us-navigation" role="navigation">
         <ul class="left-navigation">
             <li>
-                <a href="/">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li>
                 <a href="./about.html">About Us</a>
@@ -33,7 +33,7 @@
     <div class="mobile-navigation about-us-mobile-navigation">
         <ul>
             <i class="fa-solid fa-bars"></i>
-            <li><a href="/">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About Us</a></li>
             <li><a href="./login.html" class="login-link">Login</a></li>
             <li><a href="./booking.html">Book A Class</a></li>
